# DroneControl

./: DroneControl.code-workspace  pnpm-lock.yaml
.devcontainer/: devcontainer.json
app/: DroneControl.code-workspace  index.html  package.json  pnpm-lock.yaml  test.d.ts  tsconfig.json  vite.config.ts
app/.devcontainer/: devcontainer.json
app/docs/: architecture.drawio
app/public/: manifest.webmanifest  pwabuilder-adv-sw.js  service-worker.js  sw.js
app/setup/: setup_linux.sh  setup_mac.sh
app/src/: App.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/Box/: index.tsx
app/src/components/CanvasHandler/: index.tsx  styles.css
app/src/pages/Home/: index.tsx
app/src/routes/: Routes.tsx  index.tsx
app/src/static/types/: enums.ts
app/src/styles/: imports.css  index.css  scrollbar.css  titlebar.css
app/src/utils/: index.ts
app/src/utils/hooks/app/: index.ts
app/src/utils/three/: index.ts
app/src/utils/three/components/: camera.ts  cube.ts  grid.ts  lights.ts  scene.ts  sphere.ts
app/src/utils/three/systems/: controls.ts  loop.ts  renderer.ts  resizer.ts
